# rust-sandbox

./: .gitignore  Cargo.toml
phmcom-poc/: .gitignore  Cargo.toml
phmcom-poc/phmcom-cli/: Cargo.toml
phmcom-poc/phmcom-cli/src/: lib.rs  main.rs
phmcom-poc/phmcom-cli/src/commands/: greetings.rs  greetme.rs  hello.rs  mod.rs
phmcom-poc/phmcom-config/: Cargo.toml
phmcom-poc/phmcom-config/src/config/: database.rs  mod.rs  server.rs
sandbox/: Cargo.toml
sandbox/.ci/check/: check
sandbox/sdbx-commons/: Cargo.toml
sandbox/sdbx-commons/src/: lib.rs  traits.rs
sandbox/sdbx-generics-concept/: Cargo.toml
sandbox/sdbx-generics-concept/src/: lib.rs  traitcollection.rs  tryouts.rs
sandbox/sdbx-macros/: Cargo.toml
sandbox/sdbx-macros/introduce-macro-derive/: Cargo.toml
sandbox/sdbx-main/: Cargo.toml
sandbox/sdbx-main/src/: main.rs
sandbox/sdbx-main/src/coderunner/: code_container_test.rs  mod.rs
sandbox/sdbx-main/src/player/: games.rs
sandbox/sdbx-module-concept/src/: lib.rs
sandbox/sdbx-shared/: Cargo.toml
sandbox/src/: main.rs
sandbox/src/business/: mod.rs
sdbx-commons/: Cargo.toml
sdbx-commons/src/: lib.rs  traits.rs
sdbx-generics-concept/src/: lib.rs  traitcollection.rs
sdbx-macros/introduce-macro-derive/src/: lib.rs
sdbx-macros/src/: lib.rs
sdbx-main/: Cargo.toml
sdbx-main/src/: main.rs
sdbx-main/src/business/: crud.rs
sdbx-main/src/player/: games.rs  mod.rs
sdbx-module-concept/: Cargo.toml
sdbx-module-concept/src/: module_one.rs
sdbx-shared/src/: code_runner.rs
sdbx_main/: Cargo.toml
sdbx_main/src/: player.rs
sdbx_main/src/business/: helper_sub.rs
src/: main.rs  player.rs
src/business/: crud.rs  mod.rs
test-module-concept/: Cargo.toml
test-module-concept/src/: lib.rs  module_one.rs
