[workspace]
members = [
    "sdbx-main",
    "sdbx-commons",
    "sdbx-module-concept",
    "sdbx-generics-concept",
    "sdbx-macros",
    "sdbx-macros/introduce-macro-derive",
]

[profile.dev]
debug = 2
opt-level = 0
overflow-checks = true

[patch.crates-io]

# sdbx
sdbx-main = { path = "sdbx-main" }
sdbx-commons = { path = "sdbx-commons" }
sdbx-module-concept = { path = "sdbx-module-concept" }
sdbx-generics-concept = { path = "sdbx-generics-concept" }
sdbx-macros = { path = "sdbx-macros" }
introduce-macro-derive = { path = "sdbx-macros/introduce-macro-derive" }