[package]
name = "sdbx-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdbx-module-concept = "0.1.0"
sdbx-generics-concept = "0.1.0"
sdbx-commons = "0.1.0"
log = { version = "0.4", features = [ "max_level_debug", "release_max_level_info" ] }


[[bin]]
name = "rust_sandbox-main"
path = "src/main.rs"